--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sewmina Dilshan</title>
+	<title>Nimesh Rashmina</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -35,7 +35,7 @@
 
 		<div class="titleMessage">
 			<div class="heading">
-				<p class="main">SEWMINA DILSHAN</p>
+				<p class="main">Nimesh Rashmina</p>
 				<p class="sub typed"></p>
 			</div>
 		</div>
@@ -51,7 +51,7 @@
 
 
 	<nav id="navigation" class="navbar navbar-expand-lg">
-	  <a class="navbar-brand" href="index.html">Sewmina Dilshan</a>
+	  <a class="navbar-brand" href="index.html">Nimesh Rashmina</a>
 
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -95,9 +95,9 @@
 				<div class="col-md-7">
 
 
-					<h4>My name is Sewmina Dilshan</h4>
+					<h4>My name is Nimesh Rashmina</h4>
 
-					<p>Hi there! I'm Sewmina Dilshan from Ratnapura, Sri Lanka. I currently work as a Software Engineer at Xpereince LK. I have many years experience creating software, mobile apps and games for both myself, and for clients. I have experience programming in many different languages such as  C#, Java, PHP and Python.</p>
+					<p>Hi there! I'm Nimesh Rashmina from Ratnapura, Sri Lanka. I currently work as a Software Engineer at Xpereince LK. I have many years experience creating software, mobile apps and games for both myself, and for clients. I have experience programming in many different languages such as  C#, Java, PHP and Python.</p>
 
 				</div>
 
@@ -264,7 +264,7 @@
 
 			<p class="subHeading">Like what you see?</p>
 			<h2>I'd love to hear from you!</h2>
-			<a href="mailTo:sewmina7@gmail.com" class="contactButton">GET IN TOUCH!</a>
+			<a href="mailTo:nimesh@playpoolstudios.com" class="contactButton">GET IN TOUCH!</a>
 
 		</div>
 
@@ -622,7 +622,7 @@
 	<div class="copyrightSection">
 
 		<div class="col-md-12 text-center">
-			<p>Designed with 💓 by <a href="https://www.facebook.com/dewnuwan.jayaweera77">Dewnuwan Jayaweera</a> @ 2020</p>
+			<p>Designed by<a href="https://www.instagram.com/nim_xsh/">Nimesh Rashmina</a> @ 2021</p>
 		</div>
 
 	</div>
