--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 					<h4>My name is Nimesh Rashmina</h4>
 
-					<p>Hi there! I'm Nimesh Rashmina from Ratnapura, Sri Lanka. I currently work as a Software Engineer at Xpereince LK. I have many years experience creating software, mobile apps and games for both myself, and for clients. I have experience programming in many different languages such as  C#, Java, PHP and Python.</p>
+					<p>Hi there! I'm Nimesh Rashmina from Ratnapura, Sri Lanka. I currently work as a Game Developer at PlayPoolStudios.I have many years experience creating softwares/Video-Games, mobile apps and games for both myself, and for clients. I have experience programming in many different languages such as  C#, Java, PHP and Python.</p>
 
 				</div>
 
